tests/fixtures/invalid/missing_structure_ref.py
"""Invalid PyATB script - no tight-binding data reference."""

import pyatb  # noqa: F401

print("No structure reference")
